<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".OrderFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lexend_medium"
        android:text="@string/order_resumeText"
        android:textColor="@color/text_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/bg_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow
            android:id="@+id/tableOrder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_table_title"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:fontFamily="@font/lexend_medium"
                android:text="@string/order_table_titleItemText"
                android:textColor="@color/text_light"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/lexend_medium"
                android:text="@string/order_table_titleAmountText"
                android:textColor="@color/text_light"
                android:textSize="14sp"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/lexend_medium"
                android:text="@string/order_table_titlePriceText"
                android:textColor="@color/text_light"
                android:textSize="14sp"
                android:gravity="end" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/lexend_medium"
                android:text="@string/order_table_titleTotalText"
                android:textColor="@color/text_light"
                android:textSize="14sp"
                android:gravity="end" />
        </TableRow>
    </TableLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/bg_card"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableOrder"
        app:strokeColor="@color/border_card"
        app:strokeWidth="1dp"
        style="?attr/materialCardViewFilledStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>